<resources>
    <string name="app_name">Coach Area</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="age">age</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="muscles">Muscles</string>
    <string name="fats">Fats</string>
    <string name="disease">Disease</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>